<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.aksw</groupId>
		<artifactId>nliwod</artifactId>
		<version>0.0.7</version>
		<relativePath>..</relativePath>
	</parent>
	<groupId>org.aksw.qa</groupId>
	<artifactId>commons</artifactId>
	<version>0.4.21</version>
	<name>Question Answering (QA) common utilities</name>
	<description>Question Answering (QA) common utilities to load and store QA datasets and calculate performance measures. 
	It provides also basic data structures for building QA systems.</description>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<!-- TODO put lucene to own subpackage -->
		<lucene.version>7.5.0</lucene.version>
	</properties>
	
	<pluginRepositories>
		<pluginRepository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</pluginRepository>
	</pluginRepositories>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>
							-Xms415m -Xmx16G -XX:MaxPermSize=1G
					</jvmArguments>
					<mainClass>org.aksw.qa.commons.knowledgeCard.KnowledgeCardApplication</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<classifier>bootable-with-spring</classifier>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
	    	<groupId>org.springframework.boot</groupId>
	    	<artifactId>spring-boot-starter-web</artifactId>
	    </dependency> 
	    <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>
		<!-- QA datasets provided by github.com/aksw/qa-datasets -->
		<dependency>
			<groupId>org.aksw.qa</groupId>
			<artifactId>datasets</artifactId>
			<version>0.5.16</version>
		</dependency>
		
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.0.4</version>
		</dependency>
		<!--JSON simple for AGDISTIS, refactor to only one json lib -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
		</dependency>
		<!-- DL-Learner used for LGG -->
		<dependency>
			<groupId>org.dllearner</groupId>
			<artifactId>components-core</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>slf4j-log4j12</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Lucene only until index moved to own subpackage -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
	</dependencies>
</project>
